objects/ActionPlan.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <inlineHelpText>Count of Completed Tasks</inlineHelpText>
        <label>Completed</label>
        <summaryFilterItems>
            <field>ActionPlanItem.ItemState</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>ActionPlanItem.ActionPlanId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completion_Percent__c</fullName>
        <formula>IF(Completed__c !=0, Completed__c / Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <formula>IF( Completion_Percent__c &gt; 0.99, 
&quot;⚙⚙⚙⚙&quot; , 
IF( Completion_Percent__c &gt; 0.60, 
&quot;⚙⚙⚙&quot; , 
IF( Completion_Percent__c &gt; 0.30, 
&quot;⚙⚙&quot; , 
IF( Completion_Percent__c &gt; 0.10, 
&quot;⚙&quot; , 
IF( Completion_Percent__c &lt; 0.10, 
&quot;&quot; , 
&quot;&quot; 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EB_Client_Size__c</fullName>
        <label>EB Client Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Emerging Growth</fullName>
                </value>
                <value>
                    <fullName>Large Group Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Large Group Self Insured</fullName>
                </value>
                <value>
                    <fullName>Mid Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_Marketing_Team__c</fullName>
        <label>Placement/Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>None - Client Service Team Handles</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <inlineHelpText>Count of All Tasks in the Action Plan</inlineHelpText>
        <label>Total</label>
        <summaryForeignKey>ActionPlanItem.ActionPlanId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_ActionPlans</fullName>
        <columns>Name</columns>
        <columns>ActionPlanState</columns>
        <columns>Target</columns>
        <columns>StartDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Action Plans</label>
    </listViews>
    <listViews>
        <fullName>My_ActionPlans</fullName>
        <columns>Name</columns>
        <columns>ActionPlanState</columns>
        <columns>Target</columns>
        <columns>StartDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Action Plans</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>